[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[project]
name = "unit-testing"
dynamic = ["version"]
description = "An example project for showcasing unit testing."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = []
authors = [{ name = "Lari Liuhamo", email = "lari.liuhamo+pypi@gmail.com" }]
maintainers = [{ name = "Lari Liuhamo", email = "lari.liuhamo+pypi@gmail.com" }]
keywords = ["python3"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Typing :: Typed",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.12.12",
    "tox>=4.30.2",
    "tox-gh-actions>=3.3.0",
]

[project.urls]
Repository = "https://github.com/Diapolo10/unit_testing"
Changelog = "https://github.com/Diapolo10/unit_testing/blob/main/CHANGELOG.md"
Documentation = "https://github.com/Diapolo10/unit_testing/tree/main/docs"
Tracker = "https://github.com/Diapolo10/unit_testing/issues"

[tool.coverage.run]
branch = true
relative_files = true
omit = [".tox/*", "tests/*"]

[tool.coverage.report]
exclude_also = [
    "pragma: not covered",
    "@overload",
    "except importlib.metadata.PackageNotFoundError:",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.mypy]
exclude = ["tests/"]
exclude_gitignore = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest]
minversion = "9.0"
addopts = [
    "--doctest-modules",
    "--cov=./",
    "--cov-append",
    "--cov-fail-under=80",
    "--cov-report=html:tests/reports/coverage-html",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=xml:tests/reports/coverage.xml",
    "--ignore=docs/",
]
testpaths = ["tests"]

[tool.ruff]
lint.select = ["ALL"]
lint.ignore = [
    "COM812",  # Missing trailing comma (disabled due to formatter conflict)
    "D203",    # One blank line before class docstring
    "D212",    # Multi-line summary first line
    "ISC001",  # Single-line implicit string concatenation (disabled due to formatter conflict)
    "PLR0913", # Too many arguments
    "Q000",    # Single quotes found but double quotes preferred
]
line-length = 120
show-fixes = true

[tool.ruff.lint.flake8-copyright]
author = "Lari Liuhamo"

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# https://beta.ruff.rs/docs/rules/
"__init__.py" = ["F401", "F403", "F405", "PGH003"]
"tests/*" = ["ANN", "ARG", "INP001", "PLR2004", "S101"]

[tool.ruff.lint.pylint]
max-args = 15
max-branches = 20
max-returns = 10
max-statements = 80

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py311, pypy3
skip_missing_interpreters = true

[gh-actions]
python =
    3.11: py311
    pypy-3.11: pypy3

[testenv]
passenv =
    GITHUB_*
    FORCE_COLOR
allowlist_externals = uv

commands =
    uv run --active --frozen pytest
    uv run --active --frozen coverage report
"""

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { git = { commit = true, tags = true } },
]
constraint-dependencies = ["pygments>=2.20.0"]

[tool.uv-dynamic-versioning]
bump = true
fallback-version = "0.0.0"
style = "pep440"
vcs = "git"
